# spike-mastodon

./: .gitignore  Cargo.toml  README.md  bacon.toml  justfile  logfile.json
.github/: codecov.yml  dependabot.yml
.github/workflows/: check.yml  scheduled.yml  test.yml
.trunk/: trunk.yaml
src/: lib.rs  main.rs
