[package]
name = "spike-mastodon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
futures-util = "0.3"
mastodon-async = { version = "1.2", features = ["toml"] }
tokio = { version = "1", features = [
  "macros",
  "rt-multi-thread",
  "signal",
  "sync",
  "time",
  "tracing",
] }
tracing = { version = "0.1", features = ["valuable"] }
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-log = "0.1"
valuable = "0.1"
webbrowser = "0.8"
xdg = "2.4"
[patch.crates-io]
mastodon-async = { path = "../mastodon-async" }
