[package]
name = "spike-mastodon"
description = "a small package to exercise the mastodon-async library"
license = "MIT"
repository = "https://github.com/joshka/spike-mastodon"
keywords = ["mastodon", "async", "cli"]
categories = ["command-line-utilities"]
version = "0.1.0"
edition = "2021"
rust-version = "1.65"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.4"
directories = "5.0"
futures-util = "0.3"
mastodon-async = { version = "1.2.1", features = ["toml"] }
tokio = { version = "1", features = [
  "macros",
  "rt-multi-thread",
  "signal",
  "sync",
  "time",
  "tracing",
] }
tracing = { version = "0.1.36", features = ["valuable"] }
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3.10", features = ["env-filter", "json"] }
tracing-log = "0.1"
valuable = "0.1"
webbrowser = "1.0.0"

# for -Zminimal-versions
openssl = "0.10.60"

[patch.crates-io]
mastodon-async = { git = "https://github.com/joshka/mastodon-async", branch = "fix-paging" }
#mastodon-async = { path = "../mastodon-async" }
